# battleship

./: CMakeLists.txt  CMakeLists.txt.user.dc8f6f1  bot.cpp  bot.hpp  business-logic-layer.cpp  business-logic-layer.hpp  field.cpp  field.hpp  images.qrc  main-window.cpp  main-window.hpp  main-window.ui  main.cpp  ship.cpp  ship.hpp  square.cpp  square.hpp
tests/: CMakeLists.txt  test-bot.cpp
